fix resume spacing

--- a/www/css/homepage.css
+++ b/www/css/homepage.css
@@ -52,7 +52,7 @@ a {
 
 #resume {
   margin-top: 20px;
-  top: 190px;
+  top: 205px;
 }
 
 h2 {
